[tool.poetry]
name = "clickhouse-format-service"
version = "0.0.1"
description = "Clickhouse format as an api via docker"
authors = ["Emir Karamehmetoglu <emirk@axis.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {version = "^0.25.0", extras = ["standard"] }
python-multipart = "^0.0.6"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
